@@ -1,22 +1,18 @@
 package com.linkedin.datahub.graphql.resolvers.policy;
 
-import static com.linkedin.datahub.graphql.resolvers.AuthUtils.*;
+import static com.linkedin.metadata.Constants.POLICY_ENTITY_NAME;
+import static com.linkedin.metadata.authorization.ApiOperation.MANAGE;
 
-import com.datahub.plugins.auth.authorization.Authorizer;
-import com.google.common.collect.ImmutableList;
+import com.datahub.authorization.AuthUtil;
 import com.linkedin.datahub.graphql.QueryContext;
-import com.linkedin.metadata.authorization.PoliciesConfig;
+import java.util.List;
 import javax.annotation.Nonnull;
 
 public class PolicyAuthUtils {
 
   static boolean canManagePolicies(@Nonnull QueryContext context) {
-    final Authorizer authorizer = context.getAuthorizer();
-    final String principal = context.getActorUrn();
-    return isAuthorized(
-        principal,
-        ImmutableList.of(PoliciesConfig.MANAGE_POLICIES_PRIVILEGE.getType()),
-        authorizer);
+    return AuthUtil.isAuthorizedEntityType(
+        context.getActorUrn(), context.getAuthorizer(), MANAGE, List.of(POLICY_ENTITY_NAME));
   }
 
   private PolicyAuthUtils() {}
