@@ -7,7 +7,9 @@ import com.fasterxml.jackson.core.StreamReadConstraints;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.linkedin.data.schema.DataSchema;
+import com.linkedin.metadata.aspect.patch.template.AspectTemplateEngine;
 import com.linkedin.metadata.aspect.plugins.PluginFactory;
+import com.linkedin.metadata.aspect.plugins.config.PluginConfiguration;
 import com.linkedin.metadata.models.AspectSpec;
 import com.linkedin.metadata.models.DataSchemaFactory;
 import com.linkedin.metadata.models.EntitySpec;
@@ -17,7 +19,6 @@ import com.linkedin.metadata.models.EventSpecBuilder;
 import com.linkedin.metadata.models.registry.config.Entities;
 import com.linkedin.metadata.models.registry.config.Entity;
 import com.linkedin.metadata.models.registry.config.Event;
-import com.linkedin.metadata.models.registry.template.AspectTemplateEngine;
 import com.linkedin.util.Pair;
 import java.io.FileInputStream;
 import java.io.FileNotFoundException;
@@ -31,8 +32,11 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.function.BiFunction;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import javax.annotation.Nonnull;
+import javax.annotation.Nullable;
 import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.maven.artifact.versioning.ComparableVersion;
@@ -47,6 +51,10 @@ public class PatchEntityRegistry implements EntityRegistry {
 
   private final DataSchemaFactory dataSchemaFactory;
   @Getter private final PluginFactory pluginFactory;
+
+  @Getter @Nullable
+  private BiFunction<PluginConfiguration, List<ClassLoader>, PluginFactory> pluginFactoryProvider;
+
   private final Map<String, EntitySpec> entityNameToSpec;
   private final Map<String, EventSpec> eventNameToSpec;
   private final Map<String, AspectSpec> _aspectNameToSpec;
@@ -70,39 +78,51 @@ public class PatchEntityRegistry implements EntityRegistry {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder("PatchEntityRegistry[" + "identifier=" + identifier + ';');
-    entityNameToSpec.entrySet().stream()
-        .forEach(
-            entry ->
-                sb.append("[entityName=")
-                    .append(entry.getKey())
-                    .append(";aspects=[")
-                    .append(
-                        entry.getValue().getAspectSpecs().stream()
-                            .map(spec -> spec.getName())
-                            .collect(Collectors.joining(",")))
-                    .append("]]"));
-    eventNameToSpec.entrySet().stream()
-        .forEach(entry -> sb.append("[eventName=").append(entry.getKey()).append("]"));
+    entityNameToSpec.forEach(
+        (key1, value1) ->
+            sb.append("[entityName=")
+                .append(key1)
+                .append(";aspects=[")
+                .append(
+                    value1.getAspectSpecs().stream()
+                        .map(AspectSpec::getName)
+                        .collect(Collectors.joining(",")))
+                .append("]]"));
+    eventNameToSpec.forEach((key, value) -> sb.append("[eventName=").append(key).append("]"));
     return sb.toString();
   }
 
   public PatchEntityRegistry(
       Pair<Path, Path> configFileClassPathPair,
       String registryName,
-      ComparableVersion registryVersion)
+      ComparableVersion registryVersion,
+      @Nullable
+          BiFunction<PluginConfiguration, List<ClassLoader>, PluginFactory> pluginFactoryProvider)
       throws IOException, EntityRegistryException {
     this(
         DataSchemaFactory.withCustomClasspath(configFileClassPathPair.getSecond()),
-        DataSchemaFactory.getClassLoader(configFileClassPathPair.getSecond()).stream().toList(),
+        DataSchemaFactory.getClassLoader(configFileClassPathPair.getSecond())
+            .map(Stream::of)
+            .orElse(Stream.empty())
+            .collect(Collectors.toList()),
         configFileClassPathPair.getFirst(),
         registryName,
-        registryVersion);
+        registryVersion,
+        pluginFactoryProvider);
   }
 
   public PatchEntityRegistry(
-      String entityRegistryRoot, String registryName, ComparableVersion registryVersion)
+      String entityRegistryRoot,
+      String registryName,
+      ComparableVersion registryVersion,
+      @Nullable
+          BiFunction<PluginConfiguration, List<ClassLoader>, PluginFactory> pluginFactoryProvider)
       throws EntityRegistryException, IOException {
-    this(getFileAndClassPath(entityRegistryRoot), registryName, registryVersion);
+    this(
+        getFileAndClassPath(entityRegistryRoot),
+        registryName,
+        registryVersion,
+        pluginFactoryProvider);
   }
 
   private static Pair<Path, Path> getFileAndClassPath(String entityRegistryRoot)
@@ -115,7 +135,7 @@ public class PatchEntityRegistry implements EntityRegistry {
               .filter(Files::isRegularFile)
               .filter(f -> f.endsWith("entity-registry.yml") || f.endsWith("entity-registry.yaml"))
               .collect(Collectors.toList());
-      if (yamlFiles.size() == 0) {
+      if (yamlFiles.isEmpty()) {
         throw new EntityRegistryException(
             String.format(
                 "Did not find an entity registry (entity-registry.yaml/yml) under %s",
@@ -145,14 +165,17 @@ public class PatchEntityRegistry implements EntityRegistry {
       List<ClassLoader> classLoaders,
       Path configFilePath,
       String registryName,
-      ComparableVersion registryVersion)
+      ComparableVersion registryVersion,
+      @Nullable
+          BiFunction<PluginConfiguration, List<ClassLoader>, PluginFactory> pluginFactoryProvider)
       throws FileNotFoundException, EntityRegistryException {
     this(
         dataSchemaFactory,
         classLoaders,
         new FileInputStream(configFilePath.toString()),
         registryName,
-        registryVersion);
+        registryVersion,
+        pluginFactoryProvider);
   }
 
   private PatchEntityRegistry(
@@ -160,7 +183,9 @@ public class PatchEntityRegistry implements EntityRegistry {
       List<ClassLoader> classLoaders,
       InputStream configFileStream,
       String registryName,
-      ComparableVersion registryVersion)
+      ComparableVersion registryVersion,
+      @Nullable
+          BiFunction<PluginConfiguration, List<ClassLoader>, PluginFactory> pluginFactoryProvider)
       throws EntityRegistryException {
     this.dataSchemaFactory = dataSchemaFactory;
     this.registryName = registryName;
@@ -169,9 +194,14 @@ public class PatchEntityRegistry implements EntityRegistry {
     Entities entities;
     try {
       entities = OBJECT_MAPPER.readValue(configFileStream, Entities.class);
-      this.pluginFactory = PluginFactory.withCustomClasspath(entities.getPlugins(), classLoaders);
+      if (pluginFactoryProvider != null) {
+        this.pluginFactory = pluginFactoryProvider.apply(entities.getPlugins(), classLoaders);
+      } else {
+        this.pluginFactory = PluginFactory.withCustomClasspath(entities.getPlugins(), classLoaders);
+      }
+      this.pluginFactoryProvider = pluginFactoryProvider;
     } catch (IOException e) {
-      e.printStackTrace();
+      log.error("Unable to read Patch configuration.", e);
       throw new IllegalArgumentException(
           String.format(
               "Error while reading config file in path %s: %s", configFileStream, e.getMessage()));
