@@ -1,17 +1,29 @@
 package com.linkedin.metadata.resources.entity;
 
-import static com.linkedin.metadata.Constants.*;
+import static com.datahub.authorization.AuthUtil.*;
+import static com.linkedin.metadata.authorization.ApiGroup.COUNTS;
+import static com.linkedin.metadata.authorization.ApiGroup.LINEAGE;
+import static com.linkedin.metadata.authorization.ApiGroup.TIMESERIES;
+import static com.linkedin.metadata.authorization.ApiOperation.CREATE;
+import static com.linkedin.metadata.authorization.ApiOperation.DELETE;
+import static com.linkedin.metadata.authorization.ApiOperation.EXISTS;
+import static com.linkedin.metadata.authorization.ApiOperation.READ;
+import static com.linkedin.metadata.entity.validation.ValidationApiUtils.validateOrThrow;
 import static com.linkedin.metadata.entity.validation.ValidationUtils.*;
 import static com.linkedin.metadata.resources.restli.RestliConstants.*;
-import static com.linkedin.metadata.resources.restli.RestliUtils.*;
 import static com.linkedin.metadata.search.utils.SearchUtils.*;
-import static com.linkedin.metadata.shared.ValidationUtils.*;
 import static com.linkedin.metadata.utils.PegasusUtils.*;
 
 import com.codahale.metrics.MetricRegistry;
 import com.datahub.authentication.Authentication;
 import com.datahub.authentication.AuthenticationContext;
+import com.datahub.authorization.AuthUtil;
 import com.datahub.authorization.EntitySpec;
+
+import io.datahubproject.metadata.context.RequestContext;
+import io.datahubproject.metadata.services.RestrictedService;
+import com.linkedin.data.template.SetMode;
+import io.datahubproject.metadata.context.OperationContext;
 import com.datahub.plugins.auth.authorization.Authorizer;
 import com.google.common.collect.ImmutableList;
 import com.linkedin.common.AuditStamp;
@@ -114,6 +126,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   private static final String PARAM_START_TIME_MILLIS = "startTimeMillis";
   private static final String PARAM_END_TIME_MILLIS = "endTimeMillis";
   private static final String PARAM_URN = "urn";
+  private static final String PARAM_INCLUDE_SOFT_DELETE = "includeSoftDelete";
   private static final String SYSTEM_METADATA = "systemMetadata";
   private static final String ES_FIELD_TIMESTAMP = "timestampMillis";
   private static final Integer ELASTIC_MAX_PAGE_SIZE = 10000;
@@ -121,43 +134,51 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
   @Inject
   @Named("entityService")
-  private EntityService<?> _entityService;
+  private EntityService<?> entityService;
 
   @Inject
   @Named("searchService")
-  private SearchService _searchService;
+  private SearchService searchService;
 
   @Inject
   @Named("entitySearchService")
-  private EntitySearchService _entitySearchService;
+  private EntitySearchService entitySearchService;
 
   @Inject
   @Named("systemMetadataService")
-  private SystemMetadataService _systemMetadataService;
+  private SystemMetadataService systemMetadataService;
 
   @Inject
   @Named("relationshipSearchService")
-  private LineageSearchService _lineageSearchService;
+  private LineageSearchService lineageSearchService;
 
   @Inject
   @Named("kafkaEventProducer")
-  private EventProducer _eventProducer;
+  private EventProducer eventProducer;
 
   @Inject
   @Named("graphService")
-  private GraphService _graphService;
+  private GraphService graphService;
 
   @Inject
   @Named("deleteEntityService")
-  private DeleteEntityService _deleteEntityService;
+  private DeleteEntityService deleteEntityService;
 
   @Inject
   @Named("timeseriesAspectService")
-  private TimeseriesAspectService _timeseriesAspectService;
+  private TimeseriesAspectService timeseriesAspectService;
 
   @Inject
   @Named("authorizerChain")
-  private Authorizer _authorizer;
+  private Authorizer authorizer;
+
+  @Inject
+  @Named("systemOperationContext")
+  private OperationContext systemOperationContext;
+
+  @Inject
+  @Named("restrictedService")
+  private RestrictedService restrictedService;
 
   /** Retrieves the value for an entity that is made up of latest versions of specified aspects. */
   @RestMethod.Get
@@ -168,23 +189,26 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       throws URISyntaxException {
     log.info("GET {}", urnStr);
     final Urn urn = Urn.createFromString(urnStr);
+
     Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    if (!isAPIAuthorizedEntityUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+            authorizer,
+            READ,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity " + urn);
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity " + urn);
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli("restrictedService", urn.getEntityType()), authorizer, auth, true);
+
     return RestliUtil.toTask(
         () -> {
           final Set<String> projectedAspects =
               aspectNames == null
                   ? Collections.emptySet()
                   : new HashSet<>(Arrays.asList(aspectNames));
-          final Entity entity = _entityService.getEntity(urn, projectedAspects);
+          final Entity entity = entityService.getEntity(opContext, urn, projectedAspects);
           if (entity == null) {
             throw RestliUtil.resourceNotFoundException(String.format("Did not find %s", urnStr));
           }
@@ -205,27 +229,26 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     for (final String urnStr : urnStrs) {
       urns.add(Urn.createFromString(urnStr));
     }
-    List<java.util.Optional<EntitySpec>> resourceSpecs =
-        urns.stream()
-            .map(urn -> java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString())))
-            .collect(Collectors.toList());
+
     Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    if (!isAPIAuthorizedEntityUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            resourceSpecs)) {
+            authorizer,
+            READ,
+            urns)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entities: " + urnStrs);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entities: " + urnStrs);
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli("batchGet", urnStrs), authorizer, auth, true);
+
     return RestliUtil.toTask(
         () -> {
           final Set<String> projectedAspects =
               aspectNames == null
                   ? Collections.emptySet()
                   : new HashSet<>(Arrays.asList(aspectNames));
-          return _entityService.getEntities(urns, projectedAspects).entrySet().stream()
+          return entityService.getEntities(opContext, urns, projectedAspects).entrySet().stream()
               .collect(
                   Collectors.toMap(
                       entry -> entry.getKey().toString(),
@@ -257,15 +280,16 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     Authentication authentication = AuthenticationContext.getAuthentication();
     String actorUrnStr = authentication.getActor().toUrnStr();
     final Urn urn = com.datahub.util.ModelUtils.getUrnFromSnapshotUnion(entity.getValue());
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    if (!isAPIAuthorizedEntityUrns(
             authentication,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
+            authorizer,
+            CREATE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to edit entity " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to edit entity " + urn);
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_INGEST, urn.getEntityType()), authorizer, authentication, true);
 
     try {
       validateOrThrow(entity);
@@ -282,7 +306,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     final SystemMetadata finalSystemMetadata = systemMetadata;
     return RestliUtil.toTask(
         () -> {
-          _entityService.ingestEntity(entity, auditStamp, finalSystemMetadata);
+          entityService.ingestEntity(opContext, entity, auditStamp, finalSystemMetadata);
           return null;
         },
         MetricRegistry.name(this.getClass(), "ingest"));
@@ -298,21 +322,20 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
     Authentication authentication = AuthenticationContext.getAuthentication();
     String actorUrnStr = authentication.getActor().toUrnStr();
-    List<java.util.Optional<EntitySpec>> resourceSpecs =
-        Arrays.stream(entities)
+
+    List<Urn> urns = Arrays.stream(entities)
             .map(Entity::getValue)
-            .map(com.datahub.util.ModelUtils::getUrnFromSnapshotUnion)
-            .map(urn -> java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString())))
-            .collect(Collectors.toList());
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+            .map(com.datahub.util.ModelUtils::getUrnFromSnapshotUnion).collect(Collectors.toList());
+    if (!isAPIAuthorizedEntityUrns(
             authentication,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.EDIT_ENTITY_PRIVILEGE),
-            resourceSpecs)) {
+            authorizer,
+            CREATE, urns)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to edit entities.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to edit entities.");
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_BATCH_INGEST, urns.stream()
+                    .map(Urn::getEntityType).collect(Collectors.toList())), authorizer, authentication, true);
 
     for (Entity entity : entities) {
       try {
@@ -340,7 +363,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
     return RestliUtil.toTask(
         () -> {
-          _entityService.ingestEntities(
+          entityService.ingestEntities(opContext,
               Arrays.asList(entities), auditStamp, finalSystemMetadataList);
           return null;
         },
@@ -359,16 +382,21 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_COUNT) int count,
       @Optional @Deprecated @Nullable @ActionParam(PARAM_FULLTEXT) Boolean fulltext,
       @Optional @Nullable @ActionParam(PARAM_SEARCH_FLAGS) SearchFlags searchFlags) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+             READ,
+            entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
+    OperationContext opContext = OperationContext.asSession(systemOperationContext,
+                    RequestContext.builder().buildRestli(ACTION_SEARCH, entityName), authorizer, auth, true)
+            .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(Boolean.TRUE.equals(fulltext)));
+
     log.info("GET SEARCH RESULTS for {} with query {}", entityName, input);
     // TODO - change it to use _searchService once we are confident on it's latency
     return RestliUtil.toTask(
@@ -376,9 +404,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
           final SearchResult result;
           // This API is not used by the frontend for search bars so we default to structured
           result =
-              _entitySearchService.search(
-                  List.of(entityName), input, filter, sortCriterion, start, count, searchFlags);
-          return validateSearchResult(result, _entityService);
+              entitySearchService.search(opContext,
+                  List.of(entityName), input, filter, sortCriterion, start, count);
+
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+
+          return validateSearchResult(opContext, result, entityService);
         },
         MetricRegistry.name(this.getClass(), "search"));
   }
@@ -394,27 +431,36 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional SearchFlags searchFlags) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_SEARCH_ACROSS_ENTITIES, entities), authorizer, auth, true)
+            .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true));
+
+    List<String> entityList = searchService.getEntitiesToSearch(opContext, entities == null ? Collections.emptyList() : Arrays.asList(entities), count);
+    if (!isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ,
+            entityList)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
-    List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
+
     log.info("GET SEARCH RESULTS ACROSS ENTITIES for {} with query {}", entityList, input);
-    final SearchFlags finalFlags =
-        searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true);
     return RestliUtil.toTask(
-        () ->
-            validateSearchResult(
-                _searchService.searchAcrossEntities(
-                    entityList, input, filter, sortCriterion, start, count, finalFlags),
-                _entityService),
-        "searchAcrossEntities");
+        () -> {
+          SearchResult result = searchService.searchAcrossEntities(opContext, entityList, input, filter, sortCriterion, start, count);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+
+          return validateSearchResult(opContext, result, entityService);
+        });
   }
 
   @Action(name = ACTION_SCROLL_ACROSS_ENTITIES)
@@ -425,31 +471,52 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_INPUT) @Nonnull String input,
       @ActionParam(PARAM_FILTER) @Optional @Nullable Filter filter,
       @ActionParam(PARAM_SORT) @Optional @Nullable SortCriterion sortCriterion,
-      @ActionParam(PARAM_SCROLL_ID) String scrollId,
+      @ActionParam(PARAM_SCROLL_ID) @Optional @Nullable String scrollId,
       @ActionParam(PARAM_KEEP_ALIVE) String keepAlive,
       @ActionParam(PARAM_COUNT) int count,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional SearchFlags searchFlags) {
-    List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_SCROLL_ACROSS_ENTITIES, entities), authorizer, auth, true)
+            .withSearchFlags(flags -> searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true));
+
+    List<String> entityList = searchService.getEntitiesToSearch(opContext, entities == null ? Collections.emptyList() : Arrays.asList(entities), count);
+    if (!isAPIAuthorizedEntityType(
+            auth,
+            authorizer,
+            READ, entityList)) {
+      throw new RestLiServiceException(
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
+    }
+
     log.info(
         "GET SCROLL RESULTS ACROSS ENTITIES for {} with query {} and scroll ID: {}",
         entityList,
         input,
         scrollId);
-    final SearchFlags finalFlags =
-        searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true);
+
     return RestliUtil.toTask(
-        () ->
-            validateScrollResult(
-                _searchService.scrollAcrossEntities(
-                    entityList,
-                    input,
-                    filter,
-                    sortCriterion,
-                    scrollId,
-                    keepAlive,
-                    count,
-                    finalFlags),
-                _entityService),
+        () -> {
+          ScrollResult result = searchService.scrollAcrossEntities(
+                  opContext,
+                  entityList,
+                  input,
+                  filter,
+                  sortCriterion,
+                  scrollId,
+                  keepAlive,
+                  count);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+
+          return validateScrollResult(opContext, result, entityService);
+        },
         "scrollAcrossEntities");
   }
 
@@ -470,16 +537,22 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_END_TIME_MILLIS) @Optional @Nullable Long endTimeMillis,
       @Optional @Nullable @ActionParam(PARAM_SEARCH_FLAGS) SearchFlags searchFlags)
       throws URISyntaxException {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            LINEAGE, READ)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_SEARCH_ACROSS_LINEAGE, entities), authorizer, auth, true)
+            .withSearchFlags(flags -> (searchFlags != null ? searchFlags : new SearchFlags().setFulltext(true))
+                    .setIncludeRestricted(true))
+            .withLineageFlags(flags -> flags.setStartTimeMillis(startTimeMillis, SetMode.REMOVE_IF_NULL)
+                    .setEndTimeMillis(endTimeMillis, SetMode.REMOVE_IF_NULL));
+
     Urn urn = Urn.createFromString(urnStr);
     List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
     log.info(
@@ -489,22 +562,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
         entityList,
         input);
     return RestliUtil.toTask(
-        () ->
-            validateLineageSearchResult(
-                _lineageSearchService.searchAcrossLineage(
-                    urn,
-                    LineageDirection.valueOf(direction),
-                    entityList,
-                    input,
-                    maxHops,
-                    filter,
-                    sortCriterion,
-                    start,
-                    count,
-                    startTimeMillis,
-                    endTimeMillis,
-                    searchFlags),
-                _entityService),
+        () -> validateLineageSearchResult(opContext, lineageSearchService.searchAcrossLineage(
+                  opContext,
+                  urn,
+                  LineageDirection.valueOf(direction),
+                  entityList,
+                  input,
+                  maxHops,
+                  filter,
+                  sortCriterion,
+                  start,
+                  count),
+            entityService),
         "searchAcrossRelationships");
   }
 
@@ -519,13 +588,31 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_MAX_HOPS) @Optional @Nullable Integer maxHops,
       @ActionParam(PARAM_FILTER) @Optional @Nullable Filter filter,
       @ActionParam(PARAM_SORT) @Optional @Nullable SortCriterion sortCriterion,
-      @ActionParam(PARAM_SCROLL_ID) String scrollId,
+      @ActionParam(PARAM_SCROLL_ID) @Optional @Nullable String scrollId,
       @ActionParam(PARAM_KEEP_ALIVE) String keepAlive,
       @ActionParam(PARAM_COUNT) int count,
       @ActionParam(PARAM_START_TIME_MILLIS) @Optional @Nullable Long startTimeMillis,
       @ActionParam(PARAM_END_TIME_MILLIS) @Optional @Nullable Long endTimeMillis,
       @ActionParam(PARAM_SEARCH_FLAGS) @Optional @Nullable SearchFlags searchFlags)
       throws URISyntaxException {
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
+            auth,
+            authorizer,
+            LINEAGE, READ)) {
+      throw new RestLiServiceException(
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
+    }
+
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_SCROLL_ACROSS_LINEAGE, entities),
+            authorizer, auth, true)
+            .withSearchFlags(flags -> (searchFlags != null ? searchFlags : new SearchFlags().setSkipCache(true))
+                    .setIncludeRestricted(true))
+            .withLineageFlags(flags -> flags.setStartTimeMillis(startTimeMillis, SetMode.REMOVE_IF_NULL)
+                    .setEndTimeMillis(endTimeMillis, SetMode.REMOVE_IF_NULL));
+
     Urn urn = Urn.createFromString(urnStr);
     List<String> entityList = entities == null ? Collections.emptyList() : Arrays.asList(entities);
     log.info(
@@ -534,12 +621,12 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
         direction,
         entityList,
         input);
-    final SearchFlags finalFlags =
-        searchFlags != null ? searchFlags : new SearchFlags().setSkipCache(true);
+
     return RestliUtil.toTask(
         () ->
-            validateLineageScrollResult(
-                _lineageSearchService.scrollAcrossLineage(
+            validateLineageScrollResult(opContext,
+                lineageSearchService.scrollAcrossLineage(
+                        opContext,
                     urn,
                     LineageDirection.valueOf(direction),
                     entityList,
@@ -549,11 +636,8 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
                     sortCriterion,
                     scrollId,
                     keepAlive,
-                    count,
-                    startTimeMillis,
-                    endTimeMillis,
-                    finalFlags),
-                _entityService),
+                    count),
+                entityService),
         "scrollAcrossLineage");
   }
 
@@ -567,23 +651,33 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_LIST, entityName), authorizer, auth, true)
+            .withSearchFlags(flags -> new SearchFlags().setFulltext(false));
+
     log.info("GET LIST RESULTS for {} with filter {}", entityName, filter);
     return RestliUtil.toTask(
-        () ->
-            validateListResult(
-                toListResult(
-                    _entitySearchService.filter(entityName, filter, sortCriterion, start, count)),
-                _entityService),
+        () -> {
+            SearchResult result = entitySearchService.filter(opContext, entityName, filter, sortCriterion, start, count);
+          if (!AuthUtil.isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+            return validateListResult(opContext,
+                toListResult(result), entityService);
+          },
         MetricRegistry.name(this.getClass(), "filter"));
   }
 
@@ -595,20 +689,33 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_QUERY) @Nonnull String query,
       @ActionParam(PARAM_FIELD) @Optional @Nullable String field,
       @ActionParam(PARAM_FILTER) @Optional @Nullable Filter filter,
-      @ActionParam(PARAM_LIMIT) int limit) {
+      @ActionParam(PARAM_LIMIT) int limit,
+      @ActionParam(PARAM_SEARCH_FLAGS) @Optional @Nullable SearchFlags searchFlags) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+             READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_AUTOCOMPLETE, entityName), authorizer, auth, true)
+            .withSearchFlags(flags -> searchFlags != null ? searchFlags : flags);
+
     return RestliUtil.toTask(
-        () -> _entitySearchService.autoComplete(entityName, query, field, filter, limit),
+        () -> {
+          AutoCompleteResult result = entitySearchService.autoComplete(opContext, entityName, query, field, filter, limit);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+          return result; },
         MetricRegistry.name(this.getClass(), "autocomplete"));
   }
 
@@ -620,24 +727,37 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_PATH) @Nonnull String path,
       @ActionParam(PARAM_FILTER) @Optional @Nullable Filter filter,
       @ActionParam(PARAM_START) int start,
-      @ActionParam(PARAM_LIMIT) int limit) {
+      @ActionParam(PARAM_LIMIT) int limit,
+      @ActionParam(PARAM_SEARCH_FLAGS) @Optional @Nullable SearchFlags searchFlags) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+             READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+              HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_BROWSE, entityName), authorizer, auth, true)
+            .withSearchFlags(flags -> searchFlags != null ? searchFlags : flags);
+
     log.info("GET BROWSE RESULTS for {} at path {}", entityName, path);
     return RestliUtil.toTask(
-        () ->
-            validateBrowseResult(
-                _entitySearchService.browse(entityName, path, filter, start, limit),
-                _entityService),
+        () -> {
+          BrowseResult result = entitySearchService.browse(opContext, entityName, path, filter, start, limit);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized get entity.");
+          }
+          return validateBrowseResult(opContext,
+                result,
+                  entityService);
+            },
         MetricRegistry.name(this.getClass(), "browse"));
   }
 
@@ -646,19 +766,23 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @WithSpan
   public Task<StringArray> getBrowsePaths(
       @ActionParam(value = PARAM_URN, typeref = com.linkedin.common.Urn.class) @Nonnull Urn urn) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorizedEntityUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
+            authorizer,
+             READ,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity: " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity: " + urn);
     }
     log.info("GET BROWSE PATHS for {}", urn);
+
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli(ACTION_GET_BROWSE_PATHS, urn.getEntityType()), authorizer, auth, true);
+
     return RestliUtil.toTask(
-        () -> new StringArray(_entitySearchService.getBrowsePaths(urnToEntityName(urn), urn)),
+        () -> new StringArray(entitySearchService.getBrowsePaths(opContext, urnToEntityName(urn), urn)),
         MetricRegistry.name(this.getClass(), "getBrowsePaths"));
   }
 
@@ -701,7 +825,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
         () -> {
           RollbackResponse response = new RollbackResponse();
           List<AspectRowSummary> aspectRowsToDelete =
-              _systemMetadataService.findByRegistry(
+              systemMetadataService.findByRegistry(
                   finalRegistryName,
                   finalRegistryVersion.toString(),
                   false,
@@ -713,24 +837,19 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
               aspectRowsToDelete.stream()
                   .collect(Collectors.groupingBy(AspectRowSummary::getUrn))
                   .keySet();
-          List<java.util.Optional<EntitySpec>> resourceSpecs =
-              urns.stream()
-                  .map(UrnUtils::getUrn)
-                  .map(
-                      urn ->
-                          java.util.Optional.of(
-                              new EntitySpec(urn.getEntityType(), urn.toString())))
-                  .collect(Collectors.toList());
-          Authentication auth = AuthenticationContext.getAuthentication();
-          if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-              && !isAuthorized(
+
+          final Authentication auth = AuthenticationContext.getAuthentication();
+          if (!isAPIAuthorizedEntityUrns(
                   auth,
-                  _authorizer,
-                  ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-                  resourceSpecs)) {
+                  authorizer,
+                  DELETE,
+                  urns.stream().map(UrnUtils::getUrn).collect(Collectors.toSet()))) {
             throw new RestLiServiceException(
-                HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entities.");
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entities.");
           }
+          OperationContext opContext = OperationContext.asSession(
+                  systemOperationContext, RequestContext.builder().buildRestli("deleteAll", urns), authorizer, auth, true);
+
           response.setEntitiesAffected(urns.size());
           response.setEntitiesDeleted(
               aspectRowsToDelete.stream().filter(AspectRowSummary::isKeyAspect).count());
@@ -741,7 +860,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
             Map<String, String> conditions = new HashMap();
             conditions.put("registryName", finalRegistryName1);
             conditions.put("registryVersion", finalRegistryVersion1.toString());
-            _entityService.rollbackWithConditions(aspectRowsToDelete, conditions, false);
+            entityService.rollbackWithConditions(opContext, aspectRowsToDelete, conditions, false);
           }
           return response;
         },
@@ -769,23 +888,25 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_END_TIME_MILLIS) @Optional Long endTimeMillis)
       throws URISyntaxException {
     Urn urn = Urn.createFromString(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorizedEntityUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-            Collections.singletonList(
-                java.util.Optional.of(new EntitySpec(urn.getEntityType(), urn.toString()))))) {
+            authorizer,
+            DELETE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entity: " + urnStr);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entity: " + urnStr);
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_DELETE, urn.getEntityType()), authorizer, auth, true);
+
     return RestliUtil.toTask(
         () -> {
           // Find the timeseries aspects to delete. If aspectName is null, delete all.
           List<String> timeseriesAspectNames =
               EntitySpecUtils.getEntityTimeseriesAspectNames(
-                  _entityService.getEntityRegistry(), urn.getEntityType());
+                  opContext.getEntityRegistry(), urn.getEntityType());
           if (aspectName != null && !timeseriesAspectNames.contains(aspectName)) {
             throw new UnsupportedOperationException(
                 String.format("Not supported for non-timeseries aspect '{}'.", aspectName));
@@ -795,7 +916,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
 
           DeleteEntityResponse response = new DeleteEntityResponse();
           if (aspectName == null) {
-            RollbackRunResult result = _entityService.deleteUrn(urn);
+            RollbackRunResult result = entityService.deleteUrn(opContext, urn);
             response.setRows(result.getRowsDeletedFromEntityDeletion());
           }
           Long numTimeseriesDocsDeleted =
@@ -829,16 +950,19 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @Nullable Long endTimeMillis,
       @Nonnull List<String> aspectsToDelete) {
     long totalNumberOfDocsDeleted = 0;
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorizedUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urn.toString()))) {
+            authorizer,
+            TIMESERIES, DELETE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entity " + urn);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entity " + urn);
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli("deleteTimeseriesAspects", urn.getEntityType()), authorizer, auth, true);
+
     // Construct the filter.
     List<Criterion> criteria = new ArrayList<>();
     criteria.add(QueryUtils.newCriterion("urn", urn.toString()));
@@ -858,7 +982,7 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     final String entityType = urn.getEntityType();
     for (final String aspect : aspectsToDelete) {
       DeleteAspectValuesResult result =
-          _timeseriesAspectService.deleteAspectValues(entityType, aspect, filter);
+          timeseriesAspectService.deleteAspectValues(opContext, entityType, aspect, filter);
       totalNumberOfDocsDeleted += result.getNumDocsDeleted();
 
       log.debug(
@@ -882,18 +1006,21 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
     boolean dryRun = dry != null ? dry : false;
 
     Urn urn = Urn.createFromString(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorizedEntityUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.DELETE_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+            authorizer,
+            DELETE,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to delete entity " + urnStr);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to delete entity " + urnStr);
     }
+    final OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli("deleteReferences", urn.getEntityType()), authorizer, auth, true);
+
     return RestliUtil.toTask(
-        () -> _deleteEntityService.deleteReferencesTo(urn, dryRun),
+        () -> deleteEntityService.deleteReferencesTo(opContext, urn, dryRun),
         MetricRegistry.name(this.getClass(), "deleteReferences"));
   }
 
@@ -905,20 +1032,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @WithSpan
   public Task<Void> setWriteable(
       @ActionParam(PARAM_VALUE) @Optional("true") @Nonnull Boolean value) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
-            auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SET_WRITEABLE_PRIVILEGE),
-            (EntitySpec) null)) {
+
+    if (!isAPIAuthorized(
+            AuthenticationContext.getAuthentication(),
+            authorizer,
+            PoliciesConfig.SET_WRITEABLE_PRIVILEGE)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to enable and disable write mode.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to enable and disable write mode.");
     }
     log.info("setting entity resource to be writable");
     return RestliUtil.toTask(
         () -> {
-          _entityService.setWritable(value);
+          entityService.setWritable(value);
           return null;
         });
   }
@@ -927,17 +1052,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @Nonnull
   @WithSpan
   public Task<Long> getTotalEntityCount(@ActionParam(PARAM_ENTITY) @Nonnull String entityName) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_COUNTS_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            COUNTS, READ)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity counts.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
     }
-    return RestliUtil.toTask(() -> _entitySearchService.docCount(entityName));
+    OperationContext opContext = OperationContext.asSession(
+                    systemOperationContext, RequestContext.builder().buildRestli("getTotalEntityCount", entityName), authorizer, auth, true);
+    return RestliUtil.toTask(() -> entitySearchService.docCount(opContext, entityName));
   }
 
   @Action(name = "batchGetTotalEntityCount")
@@ -945,18 +1071,18 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
   @WithSpan
   public Task<LongMap> batchGetTotalEntityCount(
       @ActionParam(PARAM_ENTITIES) @Nonnull String[] entityNames) {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_COUNTS_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            COUNTS, READ)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to get entity counts.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
     }
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli("batchGetTotalEntityCount", entityNames), authorizer, auth, true);
     return RestliUtil.toTask(
-        () -> new LongMap(_searchService.docCountPerEntity(Arrays.asList(entityNames))));
+        () -> new LongMap(searchService.docCountPerEntity(opContext, Arrays.asList(entityNames))));
   }
 
   @Action(name = ACTION_LIST_URNS)
@@ -967,18 +1093,30 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count)
       throws URISyntaxException {
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_LIST_URNS, entityName), authorizer, auth, true);
+
     log.info("LIST URNS for {} with start {} and count {}", entityName, start, count);
-    return RestliUtil.toTask(() -> _entityService.listUrns(entityName, start, count), "listUrns");
+    return RestliUtil.toTask(() -> {
+      ListUrnsResult result = entityService.listUrns(opContext, entityName, start, count);
+      if (!isAPIAuthorizedEntityUrns(
+              auth,
+              authorizer,
+              READ, result.getEntities())) {
+        throw new RestLiServiceException(
+                HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
+      }
+      return result;
+      }, "listUrns");
   }
 
   @Action(name = ACTION_APPLY_RETENTION)
@@ -990,23 +1128,27 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam("attemptWithVersion") @Optional @Nullable Integer attemptWithVersion,
       @ActionParam(PARAM_ASPECT_NAME) @Optional @Nullable String aspectName,
       @ActionParam(PARAM_URN) @Optional @Nullable String urn) {
-    Authentication auth = AuthenticationContext.getAuthentication();
+
     EntitySpec resourceSpec = null;
     if (StringUtils.isNotBlank(urn)) {
       Urn resource = UrnUtils.getUrn(urn);
       resourceSpec = new EntitySpec(resource.getEntityType(), resource.toString());
     }
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorized(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.APPLY_RETENTION_PRIVILEGE),
+            authorizer,
+            PoliciesConfig.APPLY_RETENTION_PRIVILEGE,
             resourceSpec)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to apply retention.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to apply retention.");
     }
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_APPLY_RETENTION, resourceSpec.getType()), authorizer, auth, true);
+
     return RestliUtil.toTask(
-        () -> _entityService.batchApplyRetention(start, count, attemptWithVersion, aspectName, urn),
+        () -> entityService.batchApplyRetention(opContext, start, count, attemptWithVersion, aspectName, urn),
         ACTION_APPLY_RETENTION);
   }
 
@@ -1020,43 +1162,54 @@ public class EntityResource extends CollectionResourceTaskTemplate<String, Entit
       @ActionParam(PARAM_START) int start,
       @ActionParam(PARAM_COUNT) int count) {
 
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!AuthUtil.isAPIAuthorizedEntityType(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.SEARCH_PRIVILEGE),
-            (EntitySpec) null)) {
+            authorizer,
+            READ, entityName)) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized to search.");
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized to search.");
     }
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_FILTER, entityName), authorizer, auth, true);
     log.info("FILTER RESULTS for {} with filter {}", entityName, filter);
     return RestliUtil.toTask(
-        () ->
-            validateSearchResult(
-                _entitySearchService.filter(entityName, filter, sortCriterion, start, count),
-                _entityService),
+        () -> {
+          SearchResult result = entitySearchService.filter(opContext.withSearchFlags(flags -> flags.setFulltext(true)), entityName, filter, sortCriterion, start, count);
+          if (!isAPIAuthorizedResult(
+                  auth,
+                  authorizer,
+                  result)) {
+            throw new RestLiServiceException(
+                    HttpStatus.S_403_FORBIDDEN, "User is unauthorized to get entity counts.");
+          }
+            return validateSearchResult(opContext,
+                result,
+                    entityService);},
         MetricRegistry.name(this.getClass(), "search"));
   }
 
   @Action(name = ACTION_EXISTS)
   @Nonnull
   @WithSpan
-  public Task<Boolean> exists(@ActionParam(PARAM_URN) @Nonnull String urnStr)
+  public Task<Boolean> exists(@ActionParam(PARAM_URN) @Nonnull String urnStr, @ActionParam(PARAM_INCLUDE_SOFT_DELETE) @Nullable @Optional Boolean includeSoftDelete)
       throws URISyntaxException {
     Urn urn = UrnUtils.getUrn(urnStr);
-    Authentication auth = AuthenticationContext.getAuthentication();
-    if (Boolean.parseBoolean(System.getenv(REST_API_AUTHORIZATION_ENABLED_ENV))
-        && !isAuthorized(
+
+    final Authentication auth = AuthenticationContext.getAuthentication();
+    if (!isAPIAuthorizedEntityUrns(
             auth,
-            _authorizer,
-            ImmutableList.of(PoliciesConfig.GET_ENTITY_PRIVILEGE),
-            new EntitySpec(urn.getEntityType(), urnStr))) {
+            authorizer,
+            EXISTS,
+            List.of(urn))) {
       throw new RestLiServiceException(
-          HttpStatus.S_401_UNAUTHORIZED, "User is unauthorized get entity: " + urnStr);
+          HttpStatus.S_403_FORBIDDEN, "User is unauthorized check entity existence: " + urnStr);
     }
+    OperationContext opContext = OperationContext.asSession(
+            systemOperationContext, RequestContext.builder().buildRestli(ACTION_EXISTS, urn.getEntityType()), authorizer, auth, true);
     log.info("EXISTS for {}", urnStr);
+    final boolean includeRemoved = includeSoftDelete == null || includeSoftDelete;
     return RestliUtil.toTask(
-        () -> _entityService.exists(urn, true), MetricRegistry.name(this.getClass(), "exists"));
+        () -> entityService.exists(opContext, urn, includeRemoved), MetricRegistry.name(this.getClass(), "exists"));
   }
 }
